Authentication key integrated with the requests

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,4 +1,4 @@
-<form {{action "loginUser" on="submit"}}>
+<form {{action "loginUser" model on="submit"}}>
       {{input type="text" value=model.username}}
       {{input type="password" value=model.password}}
       <br>
